<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Community Eye</string>
    <string name="community_e">COMMUNITY EYE</string>
    <string name="let_s_get_s">Let us get started</string>
    <string name="full_name">Aadhar Number</string>
    <string name="enter_your_">1234-5678-8765-4321</string>
    <string name="continue_wi">Continue with E-AADHAR</string>
    <string name="by_clicking">By clicking "Continue", you agree to the Terms and Privacy Policy</string>
    <string name="record_comp">Login</string>
    <string name="uday_bhaska">Uday Bhaskar</string>
    <string name="xxxx_xxxx">5347-9856-XXXX-XXXX</string>
    <string name="next_stop_l">Next stop, Level 15. Like a GUIDE</string>
    <string name="level_now">14</string>
    <string name="level_target">15</string>
    <string name="cp_to_level">14,500 CP TO LEVEL 15</string>
    <string name="some_id">23</string>
    <string name="some_id2">106</string>
    <string name="some_id3">34</string>
    <string name="complaints">Complaints</string>
    <string name="appreciations">Appreciations</string>
    <string name="reviews">Reviews</string>
    <string name="title_activity_profile_sactivity">ProfileSActivity</string>
    <string name="appreciatio">114 Appreciations</string>
    <string name="the_long_ba">The long barrow was built on land previously inhabited in the Mesolithic period. It consisted of a spectrum.</string>
    <string name="view_34_rev">View 34 Reviews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>