<?xml version="1.0" encoding="utf-8"?>
<!-- Auto layout, variables, and unit scale are not yet supported -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_signu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/bgcolor">
    <RelativeLayout
        android:id="@+id/logo_"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp">
        <ImageView
            android:id="@+id/logo_1"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/logo_1">
        </ImageView>
        <TextView
            android:id="@+id/community_e"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="200dp"
            android:text="@string/community_e"
            android:textAppearance="@style/community_e"
            android:gravity="center_horizontal|top"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/let_s_get_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/let_s_get_s"
        android:textAppearance="@style/let_s_get_s"
        android:gravity="top" />

    <androidx.cardview.widget.CardView
        android:id="@+id/rectangle"
        android:layout_width="365dp"
        android:layout_height="77dp"
        app:cardCornerRadius="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="20dp"
        >
        <ImageView
            android:id="@+id/digilocker_"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:src="@drawable/dlimg" />

        <TextView
            android:id="@+id/continue_wi"
            android:layout_width="207dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/continue_wi"
            android:textAppearance="@style/continue_wi" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/cw"/>

    <RelativeLayout
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/full_name"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:lineHeight="20sp"
            android:text="@string/full_name"
            android:layout_marginLeft="20dp"
            android:textAppearance="@style/full_name"
            android:gravity="center_horizontal|top" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp">

            <EditText
                android:id="@+id/enter_your_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:background="@android:color/transparent"
                android:hint="1234 5678 8765 4321"
                />
        </androidx.cardview.widget.CardView>

        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/group_21"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="700dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/security_sh"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/sc"/>

        <TextView
            android:id="@+id/by_clicking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_centerVertical="true"
            android:text="@string/by_clicking"
            android:textAppearance="@style/by_clicking"
            />
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="780dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_yell"
            android:layout_gravity="center"
            android:text="@string/record_comp"
            android:background="#FFAB0D"
            android:textAppearance="@style/record_comp">
        </Button>

    </androidx.cardview.widget.CardView>

</RelativeLayout>